syntax = "proto3";

package io.aurigraph.v11.hms;

option java_package = "io.aurigraph.v11.hms.grpc";
option java_outer_classname = "HMSIntegrationProto";

// HMS Integration gRPC Service for high-frequency trading
service HMSIntegrationService {
  // Account Operations
  rpc GetHMSAccount(Empty) returns (HMSAccountResponse);
  rpc GetHMSPositions(Empty) returns (HMSPositionsResponse);
  rpc GetHMSOrders(HMSOrdersRequest) returns (HMSOrdersResponse);
  
  // Trading Operations
  rpc PlaceHMSOrder(HMSOrderRequest) returns (HMSOrderResponse);
  rpc CancelHMSOrder(CancelOrderRequest) returns (HMSOrderResponse);
  rpc GetMarketData(MarketDataRequest) returns (MarketDataResponse);
  
  // Tokenization Operations
  rpc TokenizeHMSTransaction(TokenizeTransactionRequest) returns (TokenizedTransactionResponse);
  rpc BatchTokenizeTransactions(BatchTokenizeRequest) returns (BatchTokenizeResponse);
  rpc GetTokenizedTransaction(GetTokenizedTransactionRequest) returns (TokenizedTransactionResponse);
  
  // Streaming Operations for Real-time Data
  rpc StreamHMSOrders(StreamOrdersRequest) returns (stream HMSOrderUpdate);
  rpc StreamTokenizedTransactions(StreamTokenizedRequest) returns (stream TokenizedTransactionResponse);
  rpc StreamMarketData(StreamMarketDataRequest) returns (stream MarketDataResponse);
  
  // Performance and Statistics
  rpc GetHMSIntegrationStats(Empty) returns (HMSIntegrationStatsResponse);
  rpc GetPerformanceMetrics(Empty) returns (HMSPerformanceMetricsResponse);
  
  // Asset Token Operations
  rpc GetAssetTokens(Empty) returns (AssetTokensResponse);
  rpc GetAssetToken(GetAssetTokenRequest) returns (AssetTokenResponse);
  
  // Compliance and Audit
  rpc GetComplianceReport(ComplianceReportRequest) returns (ComplianceReportResponse);
  rpc GetAuditTrail(AuditTrailRequest) returns (AuditTrailResponse);
}

// Common Types
message Empty {}

// Account Messages
message HMSAccountResponse {
  string account_number = 1;
  string status = 2;
  string currency = 3;
  string buying_power = 4;
  string cash = 5;
  string portfolio_value = 6;
  string equity = 7;
  string last_equity = 8;
  string multiplier = 9;
  bool pattern_day_trader = 10;
  string created_at = 11;
  bool account_verified = 12;
}

message HMSPositionsResponse {
  repeated HMSPosition positions = 1;
  int32 total_count = 2;
}

message HMSPosition {
  string asset_id = 1;
  string symbol = 2;
  string exchange = 3;
  string asset_class = 4;
  string avg_entry_price = 5;
  string qty = 6;
  string side = 7;
  string market_value = 8;
  string cost_basis = 9;
  string unrealized_pl = 10;
  string unrealized_plpc = 11;
  string current_price = 12;
  string change_today = 13;
}

// Order Messages
message HMSOrdersRequest {
  string status = 1; // all, open, closed, filled, cancelled
  int32 limit = 2;
  int64 after_timestamp = 3;
}

message HMSOrdersResponse {
  repeated HMSOrder orders = 1;
  int32 total_count = 2;
}

message HMSOrder {
  string id = 1;
  string client_order_id = 2;
  string created_at = 3;
  string updated_at = 4;
  string submitted_at = 5;
  string filled_at = 6;
  string asset_id = 7;
  string symbol = 8;
  string asset_class = 9;
  string qty = 10;
  string filled_qty = 11;
  double filled_avg_price = 12;
  string order_type = 13;
  string type = 14;
  string side = 15;
  string time_in_force = 16;
  double limit_price = 17;
  double stop_price = 18;
  string status = 19;
  bool extended_hours = 20;
}

message HMSOrderRequest {
  string symbol = 1;
  double quantity = 2;
  string side = 3; // buy, sell
  string order_type = 4; // market, limit, stop, stop_limit
  string time_in_force = 5; // day, gtc, ioc, fok
  double limit_price = 6;
  double stop_price = 7;
  bool extended_hours = 8;
  string client_order_id = 9;
}

message HMSOrderResponse {
  HMSOrder order = 1;
  bool success = 2;
  string error_message = 3;
  int64 timestamp = 4;
}

message CancelOrderRequest {
  string order_id = 1;
}

// Market Data Messages
message MarketDataRequest {
  string symbol = 1;
  string data_type = 2; // quote, trade, bar
}

message MarketDataResponse {
  string symbol = 1;
  double price = 2;
  double bid_price = 3;
  double ask_price = 4;
  int64 bid_size = 5;
  int64 ask_size = 6;
  int64 volume = 7;
  int64 timestamp = 8;
  string exchange = 9;
}

// Tokenization Messages
message TokenizeTransactionRequest {
  HMSOrder order = 1;
  bool force_retokenize = 2;
}

message BatchTokenizeRequest {
  repeated HMSOrder orders = 1;
  bool atomic = 2;
}

message BatchTokenizeResponse {
  repeated TokenizedTransactionResponse transactions = 1;
  int32 successful_count = 2;
  int32 failed_count = 3;
  double processing_time_ms = 4;
}

message TokenizedTransactionResponse {
  string hms_transaction_id = 1;
  string aurigraph_tx_hash = 2;
  int64 aurigraph_block = 3;
  HMSOrder hermes_order_data = 4;
  HMSTokenization tokenization = 5;
  HMSComplianceRecord compliance = 6;
  HMSQuantumSecurity quantum_security = 7;
  int64 timestamp = 8;
  double processing_time_ms = 9;
  bool success = 10;
  string error_message = 11;
}

message HMSTokenization {
  HMSAssetToken asset_token = 1;
  HMSTransactionToken transaction_token = 2;
  map<string, CrossChainDeployment> cross_chain_deployments = 3;
}

message HMSAssetToken {
  string token_id = 1;
  string contract_address = 2;
  string symbol = 3;
  int64 total_supply = 4;
  int64 aurigraph_block = 5;
  int64 created_timestamp = 6;
}

message HMSTransactionToken {
  string token_id = 1;
  string contract_address = 2;
  map<string, string> metadata = 3;
}

message CrossChainDeployment {
  string status = 1; // pending, deployed, confirmed, failed
  string contract_address = 2;
  string tx_hash = 3;
  int64 block_number = 4;
  string chain_name = 5;
}

message HMSComplianceRecord {
  bool hermes_account_verified = 1;
  repeated string regulatory_compliance = 2;
  repeated HMSAuditTrailEntry audit_trail = 3;
}

message HMSAuditTrailEntry {
  int64 timestamp = 1;
  string action = 2;
  map<string, string> details = 3;
}

message HMSQuantumSecurity {
  string dilithium_signature = 1;
  string falcon_signature = 2;
  string hash_chain = 3;
  int32 encryption_level = 4;
}

message GetTokenizedTransactionRequest {
  string hms_transaction_id = 1;
}

// Streaming Messages
message StreamOrdersRequest {
  string status_filter = 1;
  repeated string symbol_filter = 2;
}

message HMSOrderUpdate {
  HMSOrder order = 1;
  string update_type = 2; // new, updated, filled, cancelled
  int64 timestamp = 3;
}

message StreamTokenizedRequest {
  repeated string symbol_filter = 1;
  int64 from_timestamp = 2;
}

message StreamMarketDataRequest {
  repeated string symbols = 1;
  string data_type = 2; // quote, trade, bar
  int32 throttle_ms = 3;
}

// Statistics Messages
message HMSIntegrationStatsResponse {
  int64 total_tokenized_transactions = 1;
  int64 total_tokenized_volume = 2;
  int32 active_asset_tokens = 3;
  int64 current_block_height = 4;
  double current_tps = 5;
  double avg_latency_ms = 6;
  int32 cached_transactions = 7;
  int32 connected_accounts = 8;
  int64 last_update_time = 9;
  double uptime_seconds = 10;
}

message HMSPerformanceMetricsResponse {
  double tokenization_tps = 1;
  double avg_tokenization_latency_ms = 2;
  double p99_tokenization_latency_ms = 3;
  double api_response_time_ms = 4;
  int64 memory_used_mb = 5;
  int32 active_connections = 6;
  int32 thread_count = 7;
  double cpu_usage_percent = 8;
  int64 timestamp = 9;
}

// Asset Token Messages
message AssetTokensResponse {
  repeated HMSAssetToken tokens = 1;
  int32 total_count = 2;
}

message GetAssetTokenRequest {
  string symbol = 1;
}

message AssetTokenResponse {
  HMSAssetToken token = 1;
  bool found = 2;
}

// Compliance Messages
message ComplianceReportRequest {
  int64 from_timestamp = 1;
  int64 to_timestamp = 2;
  string report_type = 3; // summary, detailed, audit
}

message ComplianceReportResponse {
  string report_id = 1;
  int64 total_transactions = 2;
  int64 compliant_transactions = 3;
  double compliance_percentage = 4;
  repeated ComplianceViolation violations = 5;
  int64 generated_timestamp = 6;
}

message ComplianceViolation {
  string transaction_id = 1;
  string violation_type = 2;
  string description = 3;
  string severity = 4; // low, medium, high, critical
  int64 timestamp = 5;
}

message AuditTrailRequest {
  string transaction_id = 1;
  int64 from_timestamp = 2;
  int64 to_timestamp = 3;
}

message AuditTrailResponse {
  repeated HMSAuditTrailEntry entries = 1;
  int32 total_count = 2;
}